# EspCar

./: .editorconfig  .gitignore  EspCar.lnk  LICENSE  PROJECT_PLAN.md  README.md
.github/workflows/: firmware-ci.yml  sdk-ci.yml
docs/: CALIBRATION.md  HARDWARE.md  PROTOCOL.md  SDK_REFERENCE.md  实操说明.md
examples/: keyboard_teleop.py  read_state_demo.py
firmware/: compile_commands.json  platformio.ini
firmware/.cache/clangd/index/: Adafruit_BusIO_Register.cpp.FBB8B98E034C039E.idx  Adafruit_BusIO_Register.h.13D6050926D76CC6.idx  Adafruit_GenericDevice.cpp.0E609BC5E3798BCA.idx  Adafruit_GenericDevice.h.7ECAE7008A9BDD23.idx  Adafruit_I2CDevice.cpp.3B61F932715F2901.idx  Adafruit_I2CDevice.h.02363ACFC6B6B5B7.idx  Adafruit_INA219.cpp.A8BD0458879FD75E.idx  Adafruit_INA219.h.23AD59D4120B4648.idx  Adafruit_SPIDevice.cpp.6043AE35C08D99EC.idx  Adafruit_SPIDevice.h.27C501B68DB270AC.idx  Alignment.hpp.E18351B26E6F6ECB.idx  Allocator.hpp.E9FE7A2EEA7FDA67.idx  ArduinoJson.h.DA28FC66CADAFFEC.idx  ArduinoJson.hpp.AA76B0C8164886D9.idx  ArduinoStreamReader.hpp.AAA0689969CE022F.idx  ArduinoStringReader.hpp.936CEF3275F0647B.idx  ArduinoStringWriter.hpp.9C3D1AE26E403384.idx  ArrayData.hpp.D27E9BA6680645AD.idx  ArrayImpl.hpp.7F755707E95C98C5.idx  AsyncEventSource.cpp.3C5040C9C4304F8D.idx  AsyncEventSource.h.DB9A3EE30ACAB65B.idx  AsyncTCP.cpp.67C90E7ABAF557D7.idx  AsyncTCP.cpp.A14C7547DB451E25.idx  AsyncTCP.h.A46670FAC3BBEB05.idx  AsyncTCP.h.D2425B0DD34B0E48.idx  AsyncWebSocket.cpp.7EA188AA6C053AC4.idx  AsyncWebSocket.h.6FE4AF30F290B603.idx  AsyncWebSynchronization.h.FC68870C6FECA686.idx  CollectionData.hpp.8136B6AF7A01E8DF.idx  CollectionImpl.hpp.048D582CCF8F4895.idx  Configuration.hpp.C7C814FA2CCBDAF8.idx  Converter.hpp.499FC7278690E420.idx  ConverterImpl.hpp.B3CE1E5C8DB08F78.idx  CountingDecorator.hpp.9FA3671622BB350B.idx  DeserializationError.hpp.A0067F789C888A93.idx  DeserializationOptions.hpp.F969F69ED3F436D5.idx  DummyWriter.hpp.FF11F66DAEB7BF94.idx  ESPAsyncWebServer.h.01BF59A936308F46.idx  ElementProxy.hpp.D611FF9B40E6B444.idx  EscapeSequence.hpp.D8896995ED3FE6C2.idx  (+145 more)
firmware/.pio/libdeps/esp32dev/Adafruit GFX Library/: .piopm
firmware/.pio/libdeps/esp32dev/Adafruit NeoPixel/: .piopm  Adafruit_NeoPixel.cpp  Adafruit_NeoPixel.h  library.properties
firmware/.pio/libdeps/esp32dev/Adafruit SSD1306/: .piopm  Adafruit_SSD1306.cpp  library.properties
firmware/include/: battery.h  charge.h  config.h  encoder.h  expansion.h  index_html.h  motor.h  protocol.h  server.h  wifi_mgr.h
firmware/src/: battery.cpp  charge.cpp  encoder.cpp  expansion.cpp  main.cpp  motor.cpp  server.cpp  wifi_mgr.cpp
orchestrator/: README.md  pyproject.toml
orchestrator/configs/: default.yaml
orchestrator/deskcar_orch/: __init__.py  __main__.py  config.py  geometry.py  runtime.py
orchestrator/deskcar_orch/bridge/: __init__.py  ws_client.py
orchestrator/deskcar_orch/controller/: __init__.py  visual_servo.py
orchestrator/deskcar_orch/planning/: __init__.py  charge_sm.py
orchestrator/deskcar_orch/vision/: __init__.py  base.py  camera.py  dock.py  homography.py  tracker.py
orchestrator/deskcar_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
orchestrator/scripts/: calibrate_homography.py
orchestrator/tests/: conftest.py  test_auto_recharge.py  test_camera.py  test_charge_sm.py  test_config.py  test_geometry.py  test_homography.py  test_runtime.py  test_visual_servo.py  test_ws_client.py
sdk/: README.md  pyproject.toml
sdk/src/deskcar/: __init__.py  chassis.py  discovery.py  exceptions.py  transport.py  types.py
sdk/src/deskcar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/tests/: conftest.py  test_chassis.py  test_types.py  test_wire_shape.py
(+4 files in other folders)
