[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deskcar-orchestrator"
version = "0.1.0"
description = "PC-side vision + auto-dock loop for the DeskCar chassis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DeskCar Contributors" }]
keywords = ["robotics", "opencv", "aruco", "apriltag", "autonomy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "deskcar>=0.1",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
deskcar-orchestrator = "deskcar_orch.__main__:main"

[project.urls]
Homepage = "https://github.com/deskcar/deskcar"

[tool.setuptools.packages.find]
where = ["."]
include = ["deskcar_orch*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["deskcar_orch"]

[[tool.mypy.overrides]]
module = ["cv2.*", "yaml"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM", "RUF", "S"]
ignore = [
    "S104",  # 0.0.0.0 binding only used in some dev paths
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
