 [build-system]
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "deskcar"
 version = "0.1.0"
 description = "Async Python SDK for the DeskCar desktop smart chassis"
 readme = "README.md"
 requires-python = ">=3.10"
 license = { text = "MIT" }
 authors = [{ name = "DeskCar Contributors" }]
 keywords = ["robotics", "esp32", "chassis", "iot", "slam"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Framework :: AsyncIO",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Topic :: Software Development :: Embedded Systems",
 ]
 dependencies = [
     "websockets>=12.0",
     "pydantic>=2.6",
 ]

 [project.optional-dependencies]
 dev = [
     "pytest>=8.0",
     "pytest-asyncio>=0.23",
     "mypy>=1.8",
     "ruff>=0.4",
     "anyio>=4.3",
 ]

 [project.urls]
 Homepage = "https://github.com/deskcar/deskcar"
 Documentation = "https://deskcar.readthedocs.io"

 [tool.setuptools.packages.find]
 where = ["src"]

 [tool.setuptools.package-data]
 deskcar = ["py.typed"]

 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 testpaths = ["tests"]
 addopts = "-ra --strict-markers"

 [tool.mypy]
 python_version = "3.10"
 strict = true
 files = ["src/deskcar"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "SLF001"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM", "RUF", "S"]
ignore = [
    "S310",  # urllib.urlopen is always called with a typed local URL.
    "S104",  # 0.0.0.0 binding is intentional for UDP discovery broadcasts.
]
